# ConversationLedger

./: .env.example  .gitignore  README.md  pyproject.toml  start_conversation_ledger.ps1
conversation_ledger/: __init__.py
docs/: message-search-and-retrieval.md
schemas/: conversation_event_v0.schema.json
src/conversation_ledger/: __init__.py  __main__.py  cli.py  collector.py  config.py  context.py  exporter.py  importer.py  index.py  models.py  platforms.py  search.py  shell.py  storage.py  utils.py
src/conversation_ledger/web/: app.css  app.js  index.html
tests/: test_collector_http.py  test_context.py  test_import_export.py  test_search.py  test_shell_http.py  test_storage.py
userscripts/: conversation-ledger-openai.user.js
