[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-ledger"
version = "0.1.0"
description = "Local-first archive and export pipeline for working LLM conversations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AganinAlexandr" }
]
dependencies = []

[project.scripts]
conversation-ledger = "conversation_ledger.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

